content/docs/0.11.x/reference/cli/commands/keptn_install.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn install"
slug: keptn_install
---
## keptn install

Installs Keptn on a Kubernetes cluster

### Synopsis

The Keptn CLI allows installing Keptn on any Kubernetes derivative to which your kube config is pointing to, and on OpenShift.

For more information, please follow the installation guide [Install Keptn](https://v1.keptn.sh/docs/0.11.x/operate/install/#install-keptn)


```
keptn install [flags]
```

### Examples

```
keptn install                                                          # install on Kubernetes

keptn install --platform=openshift --use-case=continuous-delivery      # install continuous delivery on OpenShift

keptn install --platform=kubernetes --endpoint-service-type=NodePort   # install on Kubernetes with gateway NodePort

keptn install --hide-sensitive-data                                    # install on Kubernetes and hides sensitive data like api-token and endpoint in post-installation output

```

### Options

```
  -c, --creds string                   Specify a JSON file containing cluster information needed for the installation. This allows skipping user prompts to execute a *silent* Keptn installation.
      --endpoint-service-type string   Installation options for the endpoint-service type [ClusterIP,LoadBalancer,NodePort] (default "ClusterIP")
      --hide-sensitive-data            Hide the sensitive data like api-tokens and endpoints in post-installation output.
  -s, --insecure-skip-tls-verify       Skip tls verification for kubectl commands
  -p, --platform string                The platform to run Keptn on [kubernetes,openshift] (default "kubernetes")
  -u, --use-case string                Use --use-case=continuous-delivery to install the execution plane for continuous delivery. Without this flag, your Keptn is capable of the quality gate and automated remediations use-case.
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn

###### Auto generated by spf13/cobra on 25-Nov-2021
